--- a/autocomplete-address.html
+++ b/autocomplete-address.html
@@ -99,6 +99,7 @@
               id="country" disabled="true"></input></td>
       </tr>
     </table>
+    <p id="text-address"></p>
 
     <script>
       // This example displays an address form, using the autocomplete feature
@@ -136,6 +137,7 @@
 
       function fillInAddress() {
         // Get the place details from the autocomplete object.
+        document.getElementById('text-address').innerHTML = '';
         var place = autocomplete.getPlace();
 
         for (var component in componentForm) {
@@ -151,6 +153,8 @@
           if (componentForm[addressType]) {
             var val = place.address_components[i][componentForm[addressType]];
             console.log(val);
+
+            document.getElementById('text-address').appendChild(document.createTextNode(val + ' '));
             document.getElementById(addressType).value = val;
           }
         }
