--- a/form.html
+++ b/form.html
@@ -3,56 +3,70 @@
   <head>
   <title>Retrieving Autocomplete Predictions</title>
     <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
+
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
-      #right-panel {
-        font-family: 'Roboto','sans-serif';
-        line-height: 30px;
-        padding-left: 10px;
+      .form-wrapper{
+        display:block;
+        clear:both;
+        width:94%;
+        margin:1% 2%;
+        background:#f2f2f2;
+        margin-bottom:15px;
+        padding:1%;
       }
-
-      #right-panel select, #right-panel input {
-        font-size: 15px;
+      .left, .right{
+        width:49%;
+        min-width:300px;
+        display:inline-block;
+        vertical-align: top;
       }
-
-      #right-panel select {
+      #map, #map2 {
         width: 100%;
-      }
-
-      #right-panel i {
-        font-size: 12px;
-      }
-      #map {
-        width: 100%;
-        max-width:500px;
         height:300px;
       }
+
     </style>
   </head>
   <body>
-    <p>Please search and select the address from the list below</p>
-    <div id="right-panel">
-      <form id="pre-form">
-        <input id="pre-input" type="text" placeholder="Search your address"></input>
-        <button id="pre-submit" type="submit" value="submit">Search</button>
-      </form>
-      <p id="pre-input-text"></p>
-      <form id="results"></form>
-      <p id="myaddress"></p>
-      <div id="map"></div>
-      <p id="new-address"></p>
+    <!-- first form -->
+    <div class="form-wrapper">
+      <div class="left">
+        <p>Please search and select the address from the list below</p>
+        <form id="pre-form">
+          <input id="pre-input" type="text" placeholder="Search your address"></input>
+          <button id="pre-submit" type="submit" value="submit">Search</button>
+        </form>
+        <p id="pre-input-text"></p>
+        <form id="results"></form>
+        <p id="myaddress"></p>
+      </div>
+      <div class="right">
+        <div id="map" ></div>
+      </div>
+    </div>
+    <!-- second form -->
+    <div class="form-wrapper">
+      <div class="left">
+        <p>Please search and select the address from the list below</p>
+        <form id="pre-form2">
+          <input id="pre-input2" type="text" placeholder="Search your address"></input>
+          <button id="pre-submit2" type="submit" value="submit">Search</button>
+        </form>
+        <p id="pre-input-text2"></p>
+        <form id="results2"></form>
+        <p id="myaddress2"></p>
+      </div>
+      <div class="right">
+        <div id="map2" ></div>
+      </div>
     </div>
     <script>
-     
+//+++++++++ For the first form ++++++++++++++
       // Input value search
       function getPreValue() {
         document.getElementById('pre-submit').addEventListener('click', function(event) {
@@ -62,7 +76,6 @@
           myAddress();
         });
       }
-
       // Retrieves autocomplete predictions programmatically from the Google search
       function initService(inputValue) {
         document.getElementById('results').innerHTML = ''; //remove previous results
@@ -84,7 +97,6 @@
         var service = new google.maps.places.AutocompleteService();
         service.getQueryPredictions({ input: inputValue }, displaySuggestions);
       };
-
       // Get value from radio button
       var myAddressValue = '';
       function myAddress(){
@@ -97,7 +109,6 @@
           }
         });
       }
-
       // Create Google map
       function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
@@ -107,7 +118,6 @@
         var geocoder = new google.maps.Geocoder();
          geocodeAddress(geocoder, map);
       }
-
       // Change address to lat and long
       function geocodeAddress(geocoder, resultsMap) {
        var address = myAddressValue;
@@ -121,7 +131,6 @@
               position: results[0].geometry.location
             });
             console.log(results[0].formatted_address);
-
             google.maps.event.addListener(marker, 'dragend', function (event) {
               var positionLat = this.getPosition().lat();
               var positionLong = this.getPosition().lng();
@@ -129,25 +138,115 @@
               console.log(latlng);
               geocoder.geocode({'location': latlng}, function(results, status) {
                 if (status === 'OK') {
-                  console.log('New address: ' + results[0].formatted_address);
+                  var newResult = results[0].formatted_address;
+                  document.getElementById('myaddress').innerHTML = newResult;
+                  console.log(newResult);
                 } else {
                   console.log('Geocoder failed due to: ' + status);
                 }
               });
             });
+          } else {
+            console.log('Geocode was not successful for the following reason: ' + status);
+          }
+        });
+      }
 
+//+++++++++ For the second form ++++++++++++++
+// Input value search
+      function getPreValue2() {
+        document.getElementById('pre-submit2').addEventListener('click', function(event) {
+          event.preventDefault();
+          var preInputValue = document.getElementById('pre-input2').value;
+          initService2(preInputValue);
+          myAddress2();
+        });
+      }
+      // Retrieves autocomplete predictions programmatically from the Google search
+      function initService2(inputValue2) {
+        document.getElementById('results2').innerHTML = ''; //remove previous results
+        var displaySuggestions = function(predictions, status) {
+          if (status != google.maps.places.PlacesServiceStatus.OK) {
+            alert('Sorry we can not find your address on Google data, please put more information about your address or put the address near by.');
+            return;
+          }
+          // List all options in to radio
+          predictions.forEach(function(prediction) {
+            var inputRadio = '<input type="radio" name="address" value="' + prediction.description + '">' + prediction.description + '<br>';
+            var mainForm = document.getElementById('results2'),
+                makeDiv = document.createElement('div');
+                makeDiv.innerHTML = inputRadio;
+                mainForm.appendChild(makeDiv);
+                //console.log(prediction.terms);
+          });
+        };
+        var service2 = new google.maps.places.AutocompleteService();
+        service2.getQueryPredictions({ input: inputValue2 }, displaySuggestions);
+      };
+
+      // Get value from radio button
+      var myAddressValue2 = '';
+      function myAddress2(){
+        var addressList = document.getElementById('results2');
+        addressList.addEventListener('click', function(e) {
+          if (e.target.tagName === 'INPUT'){
+            myAddressValue2 = e.target.value;
+            document.getElementById('myaddress2').innerHTML = myAddressValue2;
+            initMap2();
+          }
+        });
+      }
+
+      // Create Google map
+      function initMap2() {
+        var map = new google.maps.Map(document.getElementById('map2'), {
+          zoom: 15,
+          center: {lat: 50.0755, lng: 14.4378}
+        });
+        var geocoder = new google.maps.Geocoder();
+         geocodeAddress2(geocoder, map);
+      }
+      // Change address to lat and long
+      function geocodeAddress2(geocoder, resultsMap) {
+       var address = myAddressValue2;
+        geocoder.geocode({'address': address}, function(results, status) {
+          if (status === 'OK') {
+            resultsMap.setCenter(results[0].geometry.location);
+            var marker = new google.maps.Marker({
+              map: resultsMap,
+              draggable: true,
+              animation: google.maps.Animation.DROP,
+              position: results[0].geometry.location
+            });
+            console.log(results[0].formatted_address);
+            google.maps.event.addListener(marker, 'dragend', function (event) {
+              var positionLat = this.getPosition().lat();
+              var positionLong = this.getPosition().lng();
+              var latlng = {lat: positionLat, lng: positionLong}
+              console.log(latlng);
+              geocoder.geocode({'location': latlng}, function(results, status) {
+                if (status === 'OK') {
+                  var newResult = results[0].formatted_address;
+                  document.getElementById('myaddress2').innerHTML = newResult;
+                  console.log('New address: ' + newResult);
+                } else {
+                  console.log('Geocoder failed due to: ' + status);
+                }
+              });
+            });
           } else {
             console.log('Geocode was not successful for the following reason: ' + status);
           }
         });
       }
       function initAll(){
-      initMap();
-      getPreValue();
- }
+        initMap();
+        initMap2();
+        getPreValue();
+        getPreValue2()
+      }
     </script>
-   <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2UzyELYk2dzGoyJGvCSrueFq3gOPEr3I&libraries=places&callback=initService"
-        async defer></script>-->
+
      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2UzyELYk2dzGoyJGvCSrueFq3gOPEr3I&libraries=places&callback=initAll"
         async defer></script>
 
